--- a/feedback.html
+++ b/feedback.html
@@ -63,7 +63,7 @@
 
                 if (data.status === "success") {
                     setTimeout(() => {
-                        window.location.href = "index.html"; 
+                        window.location.href = "index.php"; 
                     }, 1500); 
                 }
             })
