--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <a href="index.html"> Close Window</a>
+                    <a href="index.php"> Close Window</a>
                 </div>
                 <div class="col-12 mt-4">
                     <h1 class="privacy-policy-main-heading">Privacy Policy</h1>
@@ -261,7 +261,7 @@
                 </div>
 
                 <div class="col-12 text-center mb-3">
-                    <a href="index.html"> Close Window</a>
+                    <a href="index.php"> Close Window</a>
                 </div>
 
             </div>
