--- a/employerLogin.html
+++ b/employerLogin.html
@@ -30,11 +30,15 @@
                                 <p class="form-name">Email : </p>
                                 <input type="email" class="form-fill-box" name="email" placeholder="Email" required >
                                 <p class="form-name">Password : </p>
-                                <input type="password" class="form-fill-box" name="password" placeholder="Password" required>
+                                <input type="password" class="form-fill-box" name="password" placeholder="Password" id="password" required>
+                               <div class="passwords">
                                 <a href="employerForget.html" class="forget-pass">Forgot Password?</a>
+                                <p><input type="checkbox" onclick="togglePassword()">Show Password</p>
+                            </div>
                                 <div class="button-container">
                                     <button class="registration-submit-button" type="submit">Login</button>
                                     <a href="employerRegister.html"> <button class="registration-submit-button" type="button">Register Here</button></a>
+                                </div>
                                 </div>
                             </form>
                         </div>
@@ -45,4 +49,15 @@
     </div>
 
 </body>
+<script>
+    function togglePassword(){
+    let password = document.getElementById("password");
+if(password.type === 'password'){
+    password.type = 'text';
+}
+else{
+    password.type = 'password';
+}
+   }
+</script>
 </html>
