--- a/employerRegister.html
+++ b/employerRegister.html
@@ -25,7 +25,9 @@
                             <p class="form-name">Company Email : </p>
                             <input type="email" class="r-form-fill-box" name="email" placeholder="Email" required>
                             <p class="form-name">Password : </p>
-                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password" required>
+                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password" id="password" required>
+                            <p class="passwords"><input type="checkbox" onclick="togglePassword()">Show Password</p>
+
                             <div class="button-container">
                                 <button class="r-registration-submit-button" type="button" id="otpButton">Send OTP</button>
                             </div>
@@ -94,6 +96,15 @@
                 });
             });
         });
+        function togglePassword(){
+    let password = document.getElementById("password");
+if(password.type === 'password'){
+    password.type = 'text';
+}
+else{
+    password.type = 'password';
+}
+   }
     </script>
 </body>
 </html>
