--- a/login.html
+++ b/login.html
@@ -30,8 +30,11 @@
                                 <p class="form-name">Email : </p>
                                 <input type="email" class="form-fill-box" name="email" placeholder="Email" required >
                                 <p class="form-name">Password : </p>
-                                <input type="password" class="form-fill-box" name="password" placeholder="Password" required>
+                                <input type="password" class="form-fill-box" name="password" placeholder="Password" id="password" required>
+                                <div class="passwords">
                                 <a href="forget.html" class="forget-pass">Forgot Password?</a>
+                                <p><input type="checkbox" onclick="togglePassword()">Show Password</p>
+                                </div>
                                 <p id="responseMessage"></p>
                                 <div class="button-container">
                                     <button class="registration-submit-button" type="submit">Login</button>
@@ -66,5 +69,15 @@
             }
         });
     });
+
+   function togglePassword(){
+    let password = document.getElementById("password");
+if(password.type === 'password'){
+    password.type = 'text';
+}
+else{
+    password.type = 'password';
+}
+   }
 </script>
 </html>
