--- a/employerRegister.html
+++ b/employerRegister.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employer Registration Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z4G4fA7+7DXt659Q6S/ahlWXIC/0mV5QVF3l0uFI0Rt66r9wBorAI7p6SB6b7R9gqxD0yIrO0DkF1cJ55n1Yq/0"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="index.js"></script>
     <link rel="stylesheet" href="styleRegister.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary"></nav>
+        <div class="container-fluid">
+            <p class="navbar-brand"> <img src="pics/CareerUp.png" alt="CareerUp" id="img1"></p>
+            <Button type="button" class="buttons" id="home">Home</Button>
+
+        </div>
+    </nav>
+    </header>
+    <main>
     <div class="registration-page-background pt-5 pb-5">
         <div class="container">
             <div class="row d-flex flex-row justify-content-center">
@@ -43,6 +58,54 @@
             </div>
         </div>
     </div>
+    </main>
+    <footer class="footer mt-auto py-3 bg-light">]
+        <div class="container-footer">
+            <div class="row">
+                <div class="col-md-3" id="connect-with-us">
+                    <img src="pics/CareerUp.png" alt="CareerUp" class="img-fluid mb-3" id="img2">
+                    <p id="p1">Connect with us</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/profile.php?id=100013915323747"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/nouman_khan_innocent?igsh=MTE2NGRsYW84OGF2Mg=="><i class="fa fa-instagram"></i></a>
+                        <a href="https://github.com/NoumanKhan2003"><i class="fa fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/nouman-khan-95923a256?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <ul class="list-unstyled">
+                        <li><a href="login.html">About us</a></li>
+                        <li><a href="login.html">Careers</a></li>
+                        <li><a href="employerLogin.html">Employer home</a></li>
+                        <li><a href="login.html">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul class="list-unstyled">
+                        <li><a href="login.html">Feedback</a></li>
+                        <li><a href="notice.html">Summons/Notices</a></li>
+                        <li><a href="grievances.html">Grievances</a></li>
+                        <li><a href="report.html">Report issue</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul class="list-unstyled">
+                        <li><a href="login.html">Privacy policy</a></li>
+                        <li><a href="login.html">Terms & conditions</a></li>
+                        <li><a href="login.html">Fraud alert</a></li>
+                        <li><a href="login.html">Trust & safety</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="row mt-4">
+                    <div class="p2">
+                            <p id="p2">All trademarks are the property of their respective owners</p>
+                            <p id="p2">All rights reserved © 2024 CareerUp (India) Pvt. Ltd.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             let otpButton = document.getElementById("otpButton");
@@ -105,6 +168,10 @@ else{
     password.type = 'password';
 }
    }
+   document.getElementById("home").addEventListener("click", function() {
+            window.location.href = 'index.php';
+        });
+
     </script>
 </body>
 </html>
